[gd_scene load_steps=10 format=3 uid="uid://ds3n45aqp3iia"]

[ext_resource type="Script" path="res://Enemies/gripper.gd" id="1_708sb"]
[ext_resource type="Texture2D" uid="uid://c8272pfbxtcai" path="res://Sprites/Gripper.png" id="1_xt8g0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dnsra"]
size = Vector2(20, 4)

[sub_resource type="Animation" id="Animation_a8pjt"]
resource_name = "idle"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1, 0]
}

[sub_resource type="Animation" id="Animation_j5kmj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_juatk"]
resource_name = "gripped_on"
length = 0.15
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2dow"]
_data = {
"RESET": SubResource("Animation_j5kmj"),
"gripped_on": SubResource("Animation_juatk"),
"idle": SubResource("Animation_a8pjt")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_evawy"]
radius = 152.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d6x25"]
size = Vector2(20, 4)

[node name="Gripper" type="CharacterBody2D"]
z_index = 11
collision_layer = 4
collision_mask = 0
script = ExtResource("1_708sb")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_xt8g0")
hframes = 4
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_dnsra")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_y2dow")
}

[node name="PlayerFinder" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 2
audio_bus_name = &"Sounds"

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFinder"]
shape = SubResource("CircleShape2D_evawy")

[node name="GrabTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 3.5
one_shot = true

[node name="PlayerGrabber" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerGrabber"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_d6x25")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0, 2)
scale = Vector2(1, 1.6)

[connection signal="body_entered" from="PlayerFinder" to="." method="_on_player_finder_body_entered"]
[connection signal="timeout" from="GrabTimer" to="." method="_on_grab_timer_timeout"]
[connection signal="body_entered" from="PlayerGrabber" to="." method="_on_player_grabber_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
